# spotify-widget

./: .env.example  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  deny.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  ship-state.json  spotify_companion_widget_PDD.md  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  release-checklist.md  threat-model.md
src/: App.test.tsx  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: logging.rs  mod.rs  tray.rs  window.rs
src-tauri/src/auth/: mod.rs  secret_store.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/playback/: mod.rs
src-tauri/src/sessions/: mod.rs
src-tauri/src/spotify/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: ConnectionPrompt.tsx  Icons.tsx  MediaArtwork.tsx  SessionTimers.tsx  TransportControls.tsx
src/components/audio-ui/: PlaybackProgress.test.tsx  PlaybackProgress.tsx  TransportButton.tsx
src/hooks/: useCompanionState.ts
src/lib/: bridge.ts
src/styles/: audio-ui.css  widget.css
